    * All previously deprecated arguments have been removed in all functions.

MAJOR:
  * analyze(), analyzeFolder(), pitch_app(): a fifth method added for pitch tracking, namely Harmonic Product Spectrum ("hps")
  * analyze(), analyzeFolder(), pitch_app(): a new argument and output "harmHeight" - an estimate of how far harmonics reach in the spectrum

BUGS FIXED:
  * soundgen(): proper wiggling of secondary control parameters if temperature > 0
  * soundgen(): vibratoFreq and vibratoDep can go beyond preset levels if invalidArgAction = 'ignore'

MINOR:
  * pitch_app(): an option to turn off automatic updating of the optimal pitch contour to speed up the processing of long audio files
  * pitch_app(): easy-to-access frequency zoom (+/- or icons)
  * pitch_app(): added hotkeys for most buttons
  * pitch_app(), analyze(), analyzeFolder(): pitch prior and floor/ceiling plotted on the spectrogram
  * pitch_app(), analyze(), analyzeFolder(): improved resolution of pitch tracking methods 'spec' and 'dom' through parabolic interpolation of spectral peaks, modified algorithm of 'cep' method
  * pitch_app(), analyze(), analyzeFolder(): "invalidAction = 'ignore'" overrides defaults, just like in soundgen()
  * analyzeFolder(), segmentFolder(), modulationSpectrumFolder(), getLoudnessFolder(), getRMSFolder(): 'sound' renamed to 'file' in output
  * schwa() accepts missing values in formant frequencies
  * estimateVTL() regresses multiple frequency measurements of the same formant without pre-aggregating
  * spectrogramFolder(), modulationSpectrumFolder(), analyzeFolder(), segmentFolder(): updated html output


          CHANGES IN SOUNDGEN VERSION 1.6.2 [06-February-2020]
BUGS FIXED:
  * playme(): '...' removed from documentation (new CRAN requirements)

MINOR:
  * soundgen(): new argument "formantLocking" for temporarily locking a harmonic to a formant (a form of source-filter interaction)